--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "patch-package"
   },
   "dependencies": {
+    "@os-team/i18next-react-native-language-detector": "^1.0.23",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
