--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "start": "react-native start",
     "test": "jest",
-    "pod_install": "cd ios && pod install && cd ..",
-    "postinstall": "patch-package",
-    "prepare": "patch-package"
+    "pod_install": "cd ios && pod install && cd .."
   },
   "dependencies": {
     "@os-team/i18next-react-native-language-detector": "^1.0.23",
@@ -60,7 +58,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^8.0.3",
     "jest": "^29.2.1",
     "lint-staged": "^13.2.1",
     "metro-react-native-babel-preset": "0.73.9",
