--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "start": "react-native start",
     "test": "jest",
-    "pod_install": "cd ios && pod install && cd .."
+    "pod_install": "cd ios && pod install && cd ..",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@os-team/i18next-react-native-language-detector": "^1.0.23",
@@ -45,8 +46,8 @@
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "babel-jest": "^29.2.1",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-detox": "^1.0.0",
@@ -58,12 +59,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^29.2.1",
+    "husky": "^8.0.3",
+    "jest": "^26.6.3",
+    "jest-config": "^26.6.3",
     "lint-staged": "^13.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.7",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
@@ -76,6 +79,23 @@
       "jsx",
       "json",
       "node"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "prettier --write",
+      "git add"
+    ],
+    "*.{html,css,less,ejs}": [
+      "prettier --write",
+      "git add"
     ]
   }
 }
