--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "react-native start",
     "test": "jest",
     "pod_install": "cd ios && pod install && cd ..",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "@os-team/i18next-react-native-language-detector": "^1.0.23",
@@ -44,20 +45,23 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.57.1",
     "babel-jest": "^26.6.3",
-    "eslint": "^8.38.0",
+    "eslint": "^8.0.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-detox": "^1.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.3",
     "jest": "^26.6.3",
@@ -68,7 +72,7 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.7",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "*"
   },
   "jest": {
     "preset": "react-native",
@@ -81,19 +85,16 @@
       "node"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
       "eslint --fix",
       "prettier --write",
-      "prettier --write"
+      "prettier --write",
+      "git add"
     ],
     "*.{html,css,less,ejs}": [
-      "prettier --write"
+      "prettier --write",
+      "git add"
     ]
   }
 }
