--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-i18next": "^12.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-redux": "^8.0.5",
