add axios + update edit profile

--- a/ios/EcoParking/Info.plist
+++ b/ios/EcoParking/Info.plist
@@ -90,5 +90,7 @@
 		<string>Montserrat-Thin.ttf</string>
 		<string>Montserrat-ThinItalic.ttf</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<key>NSCameraUsageDescription</key>
 </dict>
 </plist>
