--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
     "i18next": "^22.4.14",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "qs": "^6.11.2",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-i18next": "^12.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-picker": "^5.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-redux": "^8.0.5",
