--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     // "isolatedModules": true,
     // "strict": true,
     "moduleResolution": "node16",
-    "rootDir": "app",
+    // "rootDir": "app",
     "types": [
       "node"
     ]
