--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "@rnmapbox/maps": "^10.0.8",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
