--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4",
+    "@gorhom/portal": "^1.0.14",
     "@os-team/i18next-react-native-language-detector": "^1.0.23",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -32,12 +34,13 @@
     "react-i18next": "^12.2.0",
     "react-native": "0.71.6",
     "react-native-custom-switch": "^1.0.7",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-image-picker": "^5.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-modal": "^13.0.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
@@ -83,7 +86,7 @@
     "jest-config": "^26.6.3",
     "lint-staged": "^13.2.1",
     "metro-react-native-babel-preset": "0.73.9",
-    "patch-package": "^6.5.1",
+    "patch-package": "^7.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.7",
     "react-test-renderer": "18.2.0",
