--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "qs": "^6.11.2",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-i18next": "^12.2.0",
     "react-native": "0.71.6",
+    "react-native-calendars": "^1.1299.0",
     "react-native-custom-switch": "^1.0.7",
+    "react-native-date-picker": "^4.2.13",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-image-picker": "^5.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
