--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "react-native-linear-gradient": "^2.7.3",
     "react-native-modal": "^13.0.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "^13.10.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
