--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-i18next": "^12.2.0",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1299.0",
+    "react-native-camera": "^4.2.1",
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-custom-switch": "^1.0.7",
     "react-native-date-picker": "^4.2.13",
@@ -44,6 +45,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.0",
@@ -92,7 +94,7 @@
     "jest-config": "^26.6.3",
     "lint-staged": "^13.2.1",
     "metro-react-native-babel-preset": "0.73.9",
-    "patch-package": "^7.0.0",
+    "patch-package": "^7.0.2",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.7",
     "react-test-renderer": "18.2.0",
